2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* VBNetBinding.mdp, Makefile.am, VBLanguageBinding.cs, VBCodeGenerator.cs:
	  Import VB.NET CodeDOM generator from Mono to get partial class support
	  and keyword escaping support.

2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* VBNetBinding.addin.xml, VBNetBinding.mdp, templates/AssemblyInfo.xft.xml,
	  Makefile.am: Add AssemblyInfo template.
	* templates/EmptyVBFile.xft.xml: Use standard header.
	* templates/VBGtkSharp2Project.xpt.xml,
	  templates/VBConsoleApplicationProject.xpt.xml: Use standard headers and
	  AssemblyInfo template.

2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* VBBindingCompilerServices.cs: Use WaitForOutput instead of WaitForExit to
	  make sure we get all of the output, or the output-collecting thread can
	  sometimes try to write to the StringWriter after it's disposed, and
	  crash the IDE.  Also tidy up code.
	* Makefile.am: Updated.
	* VBLanguageBinding.cs: We don't support the 1.1 profile for VB, so remove
	  it.

2007-12-26  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* VBNetBinding.addin.xml: Remove Gtk# 1.0 template. Add the
	  RuntimeOptionsPanel so that projects can change their clr version.
	* templates/VBGtkSharpProject.xpt.xml, Makefile.am: Remove Gtk# 1.0
	  template.
	* VBLanguageBinding.cs: Add support for 2.0 clr versions.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs: Fix warning.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Bump add-in versions.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml, VBNetBinding.mdp, VBNetBinding.mds, Makefile.am:
	  Directory reorganization.

2007-11-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Project/VBCompilerParameters.cs: Removed some obsolete attributes.

2007-10-29  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* VBBindingCompilerServices.cs: A few changes to cope with vbnc''s issues: